kubernetes/apps/immich/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: immich
spec:
  selector:
    app: immich-postgres
  ports:
    - port: 5432
      targetPort: 5432
